--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser-dynamic": "18.2.7",
     "@angular/router": "18.2.7",
     "angular-auth-oidc-client": "18.0.1",
+    "material-symbols": "^0.25.1",
     "prettier": "^3.3.3",
     "prettier-plugin-organize-imports": "^4.0.0",
     "rxjs": "~7.8.0",
