--- a/ci/woodpecker/release.yaml
+++ b/ci/woodpecker/release.yaml
@@ -1,8 +1,10 @@
 when:
   event:
-    - push
     - manual
-  ref: refs/heads/release
+    - push
+    - release
+  branch:
+    - main
 
 depends_on:
   - publish-image
