--- a/ci/woodpecker/check-secrets.yaml
+++ b/ci/woodpecker/check-secrets.yaml
@@ -1,21 +1,9 @@
 when:
   event:
-    - push
     - manual
+    - push
   branch:
-    - build-*
-    - ci-*
-    - dependencies
-    - dependency-*
-    - dependency
-    - feature-*
-    - fix-*
-    - main
-    - perf-*
-    - refactor-*
-    - release
-    - style-*
-    - test-*
+    exclude: main
 
 skip_clone: true
 
