ci: woodpecker - adjust branch triggers

--- a/ci/woodpecker/check-secrets.yaml
+++ b/ci/woodpecker/check-secrets.yaml
@@ -3,7 +3,19 @@ when:
     - manual
     - push
   branch:
-    exclude: main
+    - build-*
+    - ci-*
+    - dependencies
+    - dependency-*
+    - dependency
+    - feature-*
+    - fix-*
+    - main
+    - perf-*
+    - refactor-*
+    - release
+    - style-*
+    - test-*
 
 skip_clone: true
 
