--- a/ci/woodpecker/infer-and-cache-version.yaml
+++ b/ci/woodpecker/infer-and-cache-version.yaml
@@ -2,18 +2,9 @@ when:
   event:
     - manual
     - push
-  branch:
-    - build-*
-    - ci-*
-    - dependencies
-    - feature-*
-    - fix-*
-    - main
-    - perf-*
-    - refactor-*
-    - release
-    - style-*
-    - test-*
+
+depends_on:
+  - check-secrets
 
 variables:
   - &cache_volume '/home/container-runner/.local/share/docker/volumes-managed/woodpecker-ci-cache:/woodpecker/cache'
