--- a/.nyx.yaml
+++ b/.nyx.yaml
@@ -29,20 +29,20 @@ git:
   remotes:
     lan:
       authenticationMethod: USER_PASSWORD
-      user: "{{#environmentVariable}}NYX_FLYINGFISHFLASH_TOKEN_LAN{{/environmentVariable}}"
-      password: "{{#environmentVariable}}NYX_FLYINGFISHFLASH_TOKEN_LAN{{/environmentVariable}}"
+      user: '{{#environmentVariable}}NYX_FLYINGFISHFLASH_TOKEN_LAN{{/environmentVariable}}'
+      password: '{{#environmentVariable}}NYX_FLYINGFISHFLASH_TOKEN_LAN{{/environmentVariable}}'
     gitlab:
       authenticationMethod: USER_PASSWORD
-      user: "{{#environmentVariable}}NYX_FLYINGFISHFLASH_TOKEN_GITLAB{{/environmentVariable}}"
-      password: "{{#environmentVariable}}NYX_FLYINGFISHFLASH_TOKEN_GITLAB{{/environmentVariable}}"
+      user: '{{#environmentVariable}}NYX_FLYINGFISHFLASH_TOKEN_GITLAB{{/environmentVariable}}'
+      password: '{{#environmentVariable}}NYX_FLYINGFISHFLASH_TOKEN_GITLAB{{/environmentVariable}}'
     github:
       authenticationMethod: USER_PASSWORD
-      user: "{{#environmentVariable}}NYX_FLYINGFISHFLASH_TOKEN_GITHUB{{/environmentVariable}}"
-      password: "{{#environmentVariable}}NYX_FLYINGFISHFLASH_TOKEN_GITHUB{{/environmentVariable}}"
+      user: '{{#environmentVariable}}NYX_FLYINGFISHFLASH_TOKEN_GITHUB{{/environmentVariable}}'
+      password: '{{#environmentVariable}}NYX_FLYINGFISHFLASH_TOKEN_GITHUB{{/environmentVariable}}'
     codeberg:
       authenticationMethod: USER_PASSWORD
-      user: "{{#environmentVariable}}NYX_FLYINGFISHFLASH_TOKEN_CODEBERG{{/environmentVariable}}"
-      password: "{{#environmentVariable}}NYX_FLYINGFISHFLASH_TOKEN_CODEBERG{{/environmentVariable}}"
+      user: '{{#environmentVariable}}NYX_FLYINGFISHFLASH_TOKEN_CODEBERG{{/environmentVariable}}'
+      password: '{{#environmentVariable}}NYX_FLYINGFISHFLASH_TOKEN_CODEBERG{{/environmentVariable}}'
 releaseTypes:
   enabled:
     - mainline
@@ -68,7 +68,7 @@ releaseTypes:
       gitTag: 'false'
       matchBranches: '^main$'
       matchEnvironmentVariables:
-        CI: '^true$'      
+        CI: '^true$'
       matchWorkspaceStatus: 'CLEAN'
       publish: 'false'
     release:
@@ -80,7 +80,7 @@ releaseTypes:
       gitTag: 'true'
       matchBranches: '^release$'
       matchEnvironmentVariables:
-        CI: "^(true|woodpecker)$"
+        CI: '^(true|woodpecker)$'
       matchWorkspaceStatus: 'CLEAN'
       publish: 'true'
     internal:
@@ -94,28 +94,28 @@ releaseTypes:
           value: '{{#sanitize}}{{#environmentVariable}}DRONE_BUILD_NUMBER{{/environmentVariable}}{{/sanitize}}'
 services:
   codeberg:
-    type: "GITHUB"
+    type: 'GITHUB'
     options:
-      AUTHENTICATION_TOKEN: "{{#environmentVariable}}NYX_FLYINGFISHFLASH_TOKEN_CODEBERG{{/environmentVariable}}"
-      BASE_URI: "https://codeberg.org/api/v1"
-      REPOSITORY_NAME: "lorem-list-client-a"
-      REPOSITORY_OWNER: "lorem-list"
+      AUTHENTICATION_TOKEN: '{{#environmentVariable}}NYX_FLYINGFISHFLASH_TOKEN_CODEBERG{{/environmentVariable}}'
+      BASE_URI: 'https://codeberg.org/api/v1'
+      REPOSITORY_NAME: 'lorem-list-client-a'
+      REPOSITORY_OWNER: 'lorem-list'
   lan:
-    type: "GITHUB"
+    type: 'GITHUB'
     options:
-      AUTHENTICATION_TOKEN: "{{#environmentVariable}}NYX_FLYINGFISHFLASH_TOKEN_LAN{{/environmentVariable}}"
-      BASE_URI: "https://forgejo.flyingfishflash.net/api/v1"
-      REPOSITORY_NAME: "lorem-list-client-a"
-      REPOSITORY_OWNER: "lorem-list"
+      AUTHENTICATION_TOKEN: '{{#environmentVariable}}NYX_FLYINGFISHFLASH_TOKEN_LAN{{/environmentVariable}}'
+      BASE_URI: 'https://forgejo.flyingfishflash.net/api/v1'
+      REPOSITORY_NAME: 'lorem-list-client-a'
+      REPOSITORY_OWNER: 'lorem-list'
   github:
-    type: "GITHUB"
+    type: 'GITHUB'
     options:
-      AUTHENTICATION_TOKEN: "{{#environmentVariable}}NYX_FLYINGFISHFLASH_TOKEN_GITHUB{{/environmentVariable}}"
-      REPOSITORY_NAME: "lorem-list-client-a"
-      REPOSITORY_OWNER: "flyingfishflash"
+      AUTHENTICATION_TOKEN: '{{#environmentVariable}}NYX_FLYINGFISHFLASH_TOKEN_GITHUB{{/environmentVariable}}'
+      REPOSITORY_NAME: 'lorem-list-client-a'
+      REPOSITORY_OWNER: 'flyingfishflash'
   gitlab:
-    type: "GITLAB"
+    type: 'GITLAB'
     options:
-      AUTHENTICATION_TOKEN: "{{#environmentVariable}}NYX_FLYINGFISHFLASH_TOKEN_GITLAB{{/environmentVariable}}"
-      REPOSITORY_NAME: "lorem-list-client-a"
-      REPOSITORY_OWNER: "flyingfishflash"
+      AUTHENTICATION_TOKEN: '{{#environmentVariable}}NYX_FLYINGFISHFLASH_TOKEN_GITLAB{{/environmentVariable}}'
+      REPOSITORY_NAME: 'lorem-list-client-a'
+      REPOSITORY_OWNER: 'flyingfishflash'
