--- a/package.json
+++ b/package.json
@@ -23,9 +23,9 @@
     "@angular/router": "19.2.1",
     "angular-auth-oidc-client": "^19.0.0",
     "material-symbols": "^0.29.0",
-    "prettier": "^3.4.2",
+    "prettier": "^3.5.3",
     "prettier-plugin-organize-imports": "^4.0.0",
-    "rxjs": "~7.8.0",
+    "rxjs": "^7.8.2",
     "tslib": "^2.8.1",
     "zone.js": "^0.15.0"
   },
