--- a/ci/woodpecker/infer-and-cache-version.yaml
+++ b/ci/woodpecker/infer-and-cache-version.yaml
@@ -18,7 +18,7 @@ clone:
 
 steps:
   - name: infer and cache version
-    image: registry.flyingfishflash.net/flyingfishflash/nyx:3.1.0
+    image: harbor.flyingfishflash.net/flyingfishflash/nyx:3.1.3
     commands:
       - mkdir -pv /woodpecker/cache/$CI_REPO/
       - export CACHE_VERSION=/woodpecker/cache/$CI_REPO/.version
