--- a/ci/woodpecker/check-secrets.yaml
+++ b/ci/woodpecker/check-secrets.yaml
@@ -21,7 +21,7 @@ skip_clone: true
 
 steps:
   - name: check secrets
-    image: registry.flyingfishflash.net/docker.io/alpine
+    image: harbor.flyingfishflash.net/docker.io/alpine
     environment:
       EXITCODE: 0
       REGISTRY_REPOSITORY:
