--- a/ci/woodpecker/clean-cache.yaml
+++ b/ci/woodpecker/clean-cache.yaml
@@ -12,7 +12,7 @@ variables:
 
 steps:
   - name: clean cache
-    image: registry.flyingfishflash.net/docker.io/alpine:latest
+    image: harbor.flyingfishflash.net/docker.io/alpine:latest
     commands:
       - *export_cache_volume_ci_repo
       - echo $CACHE_CI_REPO
