--- a/ci/woodpecker/check-secrets.yaml
+++ b/ci/woodpecker/check-secrets.yaml
@@ -1,3 +1,6 @@
+variables:
+  - &alpine 'harbor.flyingfishflash.net/docker.io/alpine:latest'
+
 when:
   event:
     - manual
@@ -21,7 +24,7 @@ skip_clone: true
 
 steps:
   - name: check secrets
-    image: harbor.flyingfishflash.net/docker.io/alpine
+    image: *alpine
     environment:
       EXITCODE: 0
       REGISTRY_REPOSITORY:
