--- a/ci/woodpecker/clean-cache.yaml
+++ b/ci/woodpecker/clean-cache.yaml
@@ -1,3 +1,8 @@
+variables:
+  - &cache_volume '/home/container-runner/.local/share/docker/volumes-managed/woodpecker-ci-cache:/woodpecker/cache'
+  - &export_cache_volume_ci_repo 'export CACHE_CI_REPO=/woodpecker/cache/$CI_REPO'
+  - &alpine 'harbor.flyingfishflash.net/docker.io/alpine:latest'
+
 when:
   event:
     - manual
@@ -6,13 +11,9 @@ when:
 depends_on:
   - deploy
 
-variables:
-  - &cache_volume '/home/container-runner/.local/share/docker/volumes-managed/woodpecker-ci-cache:/woodpecker/cache'
-  - &export_cache_volume_ci_repo 'export CACHE_CI_REPO=/woodpecker/cache/$CI_REPO'
-
 steps:
   - name: clean cache
-    image: harbor.flyingfishflash.net/docker.io/alpine:latest
+    image: *alpine
     commands:
       - *export_cache_volume_ci_repo
       - echo $CACHE_CI_REPO
