--- a/ci/woodpecker/infer-and-cache-version.yaml
+++ b/ci/woodpecker/infer-and-cache-version.yaml
@@ -1,3 +1,7 @@
+variables:
+  - &cache_volume '/home/container-runner/.local/share/docker/volumes-managed/woodpecker-ci-cache:/woodpecker/cache'
+  - &nyx 'harbor.flyingfishflash.net/flyingfishflash/nyx:3.1.3'
+  
 when:
   event:
     - manual
@@ -5,9 +9,6 @@ when:
 
 depends_on:
   - check-secrets
-
-variables:
-  - &cache_volume '/home/container-runner/.local/share/docker/volumes-managed/woodpecker-ci-cache:/woodpecker/cache'
 
 clone:
   git:
@@ -18,7 +19,7 @@ clone:
 
 steps:
   - name: infer and cache version
-    image: harbor.flyingfishflash.net/flyingfishflash/nyx:3.1.3
+    image: *nyx
     commands:
       - mkdir -pv /woodpecker/cache/$CI_REPO/
       - export CACHE_VERSION=/woodpecker/cache/$CI_REPO/.version
