--- a/ci/woodpecker/publish-image.yaml
+++ b/ci/woodpecker/publish-image.yaml
@@ -1,3 +1,8 @@
+variables:
+  - &cache_volume '/home/container-runner/.local/share/docker/volumes-managed/woodpecker-ci-cache:/woodpecker/cache'
+  - &source_cached_version source /woodpecker/cache/$CI_REPO/.version
+  - &alpine 'harbor.flyingfishflash.net/docker.io/alpine:latest'
+
 when:
   event:
     - manual
@@ -8,10 +13,6 @@ when:
 depends_on:
   - build
 
-variables:
-  - &cache_volume '/home/container-runner/.local/share/docker/volumes-managed/woodpecker-ci-cache:/woodpecker/cache'
-  - &source_cached_version source /woodpecker/cache/$CI_REPO/.version
-
 clone:
   git:
     image: woodpeckerci/plugin-git
@@ -21,7 +22,7 @@ clone:
 
 steps:
   - name: generate image tags
-    image: harbor.flyingfishflash.net/docker.io/alpine
+    image: *alpine
     commands:
       - *source_cached_version
       - echo -n $NYX_CURRENT_VERSION > .tags
